--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
     <application
         android:allowBackup="true"
         android:configChanges="keyboardHidden|orientation|screenSize"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/view"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
@@ -39,7 +39,7 @@
         <activity
             android:name=".listLayout"
             android:label="All Contacts"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name=".Search"
